Backed out changeset b2749184f16a (bug 1755335) for causing build bustages on TransformStream.webidl CLOSED TREE
UltraBlame original commit: e7eeff4c949175ddc68e0bb45d189e06a454655f

--- a/testing/web-platform/meta/streams/transform-streams/errors.any.js.ini
+++ b/testing/web-platform/meta/streams/transform-streams/errors.any.js.ini
@@ -5,6 +5,9 @@
   [TransformStream errors thrown in flush put the writable and readable in an errored state]
     expected: FAIL
 
+  [errored TransformStream should not enqueue new chunks]
+    expected: FAIL
+
   [TransformStream transformer.start() rejected promise should error the stream]
     expected: FAIL
 
@@ -62,6 +65,9 @@
     expected: FAIL
 
   [TransformStream errors thrown in flush put the writable and readable in an errored state]
+    expected: FAIL
+
+  [errored TransformStream should not enqueue new chunks]
     expected: FAIL
 
   [TransformStream transformer.start() rejected promise should error the stream]
@@ -123,6 +129,9 @@
   [TransformStream errors thrown in flush put the writable and readable in an errored state]
     expected: FAIL
 
+  [errored TransformStream should not enqueue new chunks]
+    expected: FAIL
+
   [TransformStream transformer.start() rejected promise should error the stream]
     expected: FAIL
 
@@ -180,6 +189,9 @@
     expected: FAIL
 
   [TransformStream errors thrown in flush put the writable and readable in an errored state]
+    expected: FAIL
+
+  [errored TransformStream should not enqueue new chunks]
     expected: FAIL
 
   [TransformStream transformer.start() rejected promise should error the stream]
