--- a/testing/web-platform/meta/streams/transform-streams/general.any.js.ini
+++ b/testing/web-platform/meta/streams/transform-streams/general.any.js.ini
@@ -1,4 +1,10 @@
 [general.any.sharedworker.html]
+  [TransformStream can be constructed with a transform function]
+    expected: FAIL
+
+  [TransformStream can be constructed with no transform function]
+    expected: FAIL
+
   [TransformStream writable starts in the writable state]
     expected: FAIL
 
@@ -44,7 +50,13 @@
   [closing the writable should close the readable when there are no queued chunks, even with backpressure]
     expected: FAIL
 
+  [enqueue() should throw after controller.terminate()]
+    expected: FAIL
+
   [enqueue() should throw after readable.cancel()]
+    expected: FAIL
+
+  [controller.terminate() should do nothing the second time it is called]
     expected: FAIL
 
   [terminate() should do nothing after readable.cancel()]
@@ -64,6 +76,12 @@
 
 
 [general.any.html]
+  [TransformStream can be constructed with a transform function]
+    expected: FAIL
+
+  [TransformStream can be constructed with no transform function]
+    expected: FAIL
+
   [TransformStream writable starts in the writable state]
     expected: FAIL
 
@@ -109,7 +127,13 @@
   [closing the writable should close the readable when there are no queued chunks, even with backpressure]
     expected: FAIL
 
+  [enqueue() should throw after controller.terminate()]
+    expected: FAIL
+
   [enqueue() should throw after readable.cancel()]
+    expected: FAIL
+
+  [controller.terminate() should do nothing the second time it is called]
     expected: FAIL
 
   [terminate() should do nothing after readable.cancel()]
@@ -129,6 +153,12 @@
 
 
 [general.any.worker.html]
+  [TransformStream can be constructed with a transform function]
+    expected: FAIL
+
+  [TransformStream can be constructed with no transform function]
+    expected: FAIL
+
   [TransformStream writable starts in the writable state]
     expected: FAIL
 
@@ -174,7 +204,13 @@
   [closing the writable should close the readable when there are no queued chunks, even with backpressure]
     expected: FAIL
 
+  [enqueue() should throw after controller.terminate()]
+    expected: FAIL
+
   [enqueue() should throw after readable.cancel()]
+    expected: FAIL
+
+  [controller.terminate() should do nothing the second time it is called]
     expected: FAIL
 
   [terminate() should do nothing after readable.cancel()]
@@ -194,6 +230,12 @@
 
 
 [general.any.serviceworker.html]
+  [TransformStream can be constructed with a transform function]
+    expected: FAIL
+
+  [TransformStream can be constructed with no transform function]
+    expected: FAIL
+
   [TransformStream writable starts in the writable state]
     expected: FAIL
 
@@ -239,7 +281,13 @@
   [closing the writable should close the readable when there are no queued chunks, even with backpressure]
     expected: FAIL
 
+  [enqueue() should throw after controller.terminate()]
+    expected: FAIL
+
   [enqueue() should throw after readable.cancel()]
+    expected: FAIL
+
+  [controller.terminate() should do nothing the second time it is called]
     expected: FAIL
 
   [terminate() should do nothing after readable.cancel()]
