--- a/testing/web-platform/meta/streams/transform-streams/terminate.any.js.ini
+++ b/testing/web-platform/meta/streams/transform-streams/terminate.any.js.ini
@@ -5,6 +5,9 @@
   [controller.terminate() should prevent remaining chunks from being processed]
     expected: FAIL
 
+  [controller.enqueue() should throw after controller.terminate()]
+    expected: FAIL
+
   [controller.error() after controller.terminate() with queued chunk should error the readable]
     expected: FAIL
 
@@ -20,6 +23,9 @@
     expected: FAIL
 
   [controller.terminate() should prevent remaining chunks from being processed]
+    expected: FAIL
+
+  [controller.enqueue() should throw after controller.terminate()]
     expected: FAIL
 
   [controller.error() after controller.terminate() with queued chunk should error the readable]
@@ -39,6 +45,9 @@
   [controller.terminate() should prevent remaining chunks from being processed]
     expected: FAIL
 
+  [controller.enqueue() should throw after controller.terminate()]
+    expected: FAIL
+
   [controller.error() after controller.terminate() with queued chunk should error the readable]
     expected: FAIL
 
@@ -54,6 +63,9 @@
     expected: FAIL
 
   [controller.terminate() should prevent remaining chunks from being processed]
+    expected: FAIL
+
+  [controller.enqueue() should throw after controller.terminate()]
     expected: FAIL
 
   [controller.error() after controller.terminate() with queued chunk should error the readable]
