--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3610,17 +3610,13 @@
   value: false
   mirror: always
 
+# DON'T enable, there are known issues!
 - name: dom.streams.byte_streams.enabled
   type: RelaxedAtomicBool
   value: false
   mirror: always
 
 - name: dom.streams.writable_streams.enabled
-  type: RelaxedAtomicBool
-  value: false
-  mirror: always
-
-- name: dom.streams.transform_streams.enabled
   type: RelaxedAtomicBool
   value: false
   mirror: always
