--- a/testing/web-platform/meta/streams/transform-streams/strategies.any.js.ini
+++ b/testing/web-platform/meta/streams/transform-streams/strategies.any.js.ini
@@ -20,6 +20,9 @@
   [writableStrategy highWaterMark should be converted to a number]
     expected: FAIL
 
+  [readableStrategy highWaterMark should be converted to a number]
+    expected: FAIL
+
   [a bad readableStrategy size function should cause writer.write() to reject on an identity transform]
     expected: FAIL
 
@@ -47,6 +50,9 @@
     expected: FAIL
 
   [writableStrategy highWaterMark should be converted to a number]
+    expected: FAIL
+
+  [readableStrategy highWaterMark should be converted to a number]
     expected: FAIL
 
   [a bad readableStrategy size function should cause writer.write() to reject on an identity transform]
@@ -78,6 +84,9 @@
   [writableStrategy highWaterMark should be converted to a number]
     expected: FAIL
 
+  [readableStrategy highWaterMark should be converted to a number]
+    expected: FAIL
+
   [a bad readableStrategy size function should cause writer.write() to reject on an identity transform]
     expected: FAIL
 
@@ -105,6 +114,9 @@
     expected: FAIL
 
   [writableStrategy highWaterMark should be converted to a number]
+    expected: FAIL
+
+  [readableStrategy highWaterMark should be converted to a number]
     expected: FAIL
 
   [a bad readableStrategy size function should cause writer.write() to reject on an identity transform]
