Bug 1755047 - move e10 reftest* to -no-fission. r=releng-reviewers,gbrown
Differential Revision: https://phabricator.services.mozilla.com/D138577

UltraBlame original commit: 1be89987f3a76d768a3437e96905b6b0027af1a1

--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -99,7 +99,9 @@ treeherder:
         'MSIXs': 'Signing of Repack into MSIX package'
         'R': 'Reftests'
         'R-fis': 'Reftests with fission enabled'
+        'R-nofis': 'Reftests with fission enabled'
         'R-swr': 'Reftests with software webrender enabled'
+        'R-swr-nofis': 'Reftests with software webrender enabled'
         'R-swr-fis': 'Reftests with software webrender and fission enabled'
         'R-wayland': 'Reftests with Wayland backend enabled'
         'Rap': 'Raptor performance tests on Firefox'
