Bug 1755067 - move e10s wpt tests to no-fission. r=releng-reviewers,gbrown
Differential Revision: https://phabricator.services.mozilla.com/D138591

UltraBlame original commit: 8d7a0fa58d0451e9384727ad8b029680c8718a93

--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -130,9 +130,10 @@ treeherder:
         'W': 'Web platform tests'
         'W-dfpi-fis': 'Web platform tests with dFPI and Fission enabled'
         'W-fis': 'Web platform tests with fission enabled'
-        'W-headless': 'Headless web platform tests'
+        'W-nofis': 'Web platform tests with fission enabled'
+        'W-headless-nofis': 'Headless web platform tests'
         'W-headless-fis': 'Headless web platform tests with fission enabled'
-        'W-swr': 'Web platform tests with software webrender enabled'
+        'W-swr-nofis': 'Web platform tests with software webrender enabled'
         'W-swr-fis': 'Web platform tests with software webrender enabled'
         'W-b': 'Web platform tests (backlog)'
         'W-b-fis': 'Web platform tests (backlog) with fission enabled'
