Bug 1754613 - split a11y tests out of mochitest-browser-chrome into mochitest-browser-a11y. r=releng-reviewers,Jamie,gbrown
here is a try push:
https://treeherder.mozilla.org/jobs?repo=try&group_state=expanded&tier=1%2C2%2C3&revision=aca12d2de75f1fb0eb25432358e5518a8e7f812d

most of the bc failures fall into:
https://bugzilla.mozilla.org/show_bug.cgi?id=1742167

I only tested bc to see if there were issues removing the `ba` tests from there.

Differential Revision: https://phabricator.services.mozilla.com/D138571

UltraBlame original commit: 8af015d2919887453c6312ddb6023373d9b74fb0

--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -297,6 +297,31 @@ mochitest-browser-chrome:
             default: default
     allow-software-gl-layers: false
 
+mochitest-browser-a11y:
+    description: "Mochitest browser-a11y run"
+    suite:
+        name: mochitest-browser-a11y
+    treeherder-symbol: M(ba)
+    schedules-component: mochitest-browser-a11y
+    loopback-video: true
+    run-without-variant: false
+    variants:
+        - fission
+    run-on-projects:
+        by-variant:
+            fission:
+                by-test-platform:
+                    android.*: []
+                    default: built-projects
+            default: []
+    tier: default
+    max-run-time: 1800
+    mozharness:
+        mochitest-flavor: browser
+    instance-size: default
+    allow-software-gl-layers: false
+    virtualization: virtual
+
 mochitest-browser-chrome-failures:
     description: "Mochitest failures for browser chrome run"
     treeherder-symbol: M-f(bc)
