Backed out changeset 66db45689d25 (bug 1755600) for causing web-platform failures on image-compositing-large-scale-change.html.
UltraBlame original commit: 4d835ba214552ec2897bbd806a5937a44dbbf057

--- a/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/image-compositing-large-scale-change.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/image-compositing-large-scale-change.html.ini
@@ -1,2 +1,3 @@
 [image-compositing-large-scale-change.html]
-  prefs: [apz.allow_zooming:true]
+  expected:
+    if (os == "android"): ["PASS", "TIMEOUT"]
