Bug 1755379 - Build cctools with the stage1 clang. r=firefox-build-system-reviewers,mhentges
Bug 1752977 attempted to do that, but that part had to be backed out as
a fixup because it broke LTO support for the linker.

To make it work, cctools needs to link against clang's libLTO, which
requires libLTO to be built with the toolchain sysroot. But system GCC
doesn't support that in a nice way, so we switch to system clang. We
explicitly don't use /usr/bin/clang++ because that would use the system
libstdc++ headers instead of the ones from the sysroot, while using
/usr/lib/llvm-11/bin/clang++ uses the ones from the sysroot.

We keep building clang 5.0 with gcc, though, because that one fails to
build with clang 11.

Differential Revision: https://phabricator.services.mozilla.com/D138712

UltraBlame original commit: 8d8d0da086882abe3ccdb56bf92e9253a168feb4

--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -123,6 +123,8 @@ linux64-clang-13-stage1:
     fetches:
         fetch:
             - clang-13
+        toolchain:
+            - linux64-toolchain-sysroot
 
 linux64-clang-13-profile:
     description: "Clang 13 toolchain build"
