--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -190,33 +190,15 @@ linux64-clang-13-android-cross:
     run:
         using: toolchain-script
         script: repack-clang-linux-cross.sh
-        arguments:
-            - aarch64
-            - arm
-            - x86
-            - x64
         toolchain-alias: linux64-clang-android-cross
         toolchain-artifact: public/build/clang.tar.zst
-    dependencies:
-        android-aarch64-compiler-rt-13: toolchain-android-aarch64-compiler-rt-13
-        android-arm-compiler-rt-13: toolchain-android-arm-compiler-rt-13
-        android-x86-compiler-rt-13: toolchain-android-x86-compiler-rt-13
-        android-x64-compiler-rt-13: toolchain-android-x64-compiler-rt-13
     fetches:
         toolchain:
             - linux64-clang-13
-        android-aarch64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: aarch64
-        android-arm-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: arm
-        android-x86-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: x86
-        android-x64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: x64
+            - android-aarch64-compiler-rt-13
+            - android-arm-compiler-rt-13
+            - android-x86-compiler-rt-13
+            - android-x64-compiler-rt-13
 
 linux64-clang-13-aarch64-cross:
     description: "Clang 13 toolchain build with aarch64 runtime"
@@ -229,13 +211,10 @@ linux64-clang-13-aarch64-cross:
         script: repack-clang-linux-cross.sh
         toolchain-alias: linux64-clang-aarch64-cross
         toolchain-artifact: public/build/clang.tar.zst
-    dependencies:
-        linux64-aarch64-compiler-rt-13: toolchain-linux64-aarch64-compiler-rt-13
     fetches:
         toolchain:
             - linux64-clang-13
-        linux64-aarch64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
+            - linux64-aarch64-compiler-rt-13
 
 linux64-clang-13-macosx-cross:
     description: "Clang 13 toolchain repack with MacOS Compiler RT libs"
@@ -248,19 +227,12 @@ linux64-clang-13-macosx-cross:
         script: repack-clang-linux-macosx-cross.sh
         toolchain-alias: linux64-clang-macosx-cross
         toolchain-artifact: public/build/clang.tar.zst
-    dependencies:
-        macosx64-aarch64-compiler-rt-13: toolchain-macosx64-aarch64-compiler-rt-13
-        macosx64-x64-compiler-rt-13: toolchain-macosx64-x64-compiler-rt-13
     fetches:
         toolchain:
             - linux64-cctools-port
             - linux64-clang-13
-        macosx64-aarch64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: aarch64
-        macosx64-x64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: x86_64
+            - macosx64-aarch64-compiler-rt-13
+            - macosx64-x64-compiler-rt-13
 
 linux64-clang-13-win-cross:
     description: "Clang 13 toolchain repack with Windows Compiler RT libs"
@@ -273,18 +245,11 @@ linux64-clang-13-win-cross:
         script: repack-clang-linux-win-cross.sh
         toolchain-alias: linux64-clang-win-cross
         toolchain-artifact: public/build/clang.tar.zst
-    dependencies:
-        win32-compiler-rt-13: toolchain-win32-compiler-rt-13
-        win64-compiler-rt-13: toolchain-win64-compiler-rt-13
     fetches:
         toolchain:
             - linux64-clang-13
-        win32-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: x86
-        win64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: x86_64
+            - win32-compiler-rt-13
+            - win64-compiler-rt-13
 
 macosx64-clang-13-raw:
     description: "Clang 13 toolchain build"
@@ -333,19 +298,12 @@ macosx64-clang-13:
             - macosx64-clang
             - macosx64-clang-toolchain
         toolchain-artifact: public/build/clang.tar.zst
-    dependencies:
-        macosx64-aarch64-compiler-rt-13: toolchain-macosx64-aarch64-compiler-rt-13
-        macosx64-x64-compiler-rt-13: toolchain-macosx64-x64-compiler-rt-13
     fetches:
         toolchain:
             - linux64-cctools-port
             - macosx64-clang-13-raw
-        macosx64-aarch64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: aarch64
-        macosx64-x64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: x86_64
+            - macosx64-aarch64-compiler-rt-13
+            - macosx64-x64-compiler-rt-13
 
 macosx64-aarch64-clang-13-raw:
     description: "Clang 13 toolchain build"
@@ -394,19 +352,12 @@ macosx64-aarch64-clang-13:
         script: repack-clang-linux-macosx-cross.sh
         toolchain-alias: macosx64-aarch64-clang
         toolchain-artifact: public/build/clang.tar.zst
-    dependencies:
-        macosx64-aarch64-compiler-rt-13: toolchain-macosx64-aarch64-compiler-rt-13
-        macosx64-x64-compiler-rt-13: toolchain-macosx64-x64-compiler-rt-13
     fetches:
         toolchain:
             - linux64-cctools-port
             - macosx64-aarch64-clang-13-raw
-        macosx64-aarch64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: aarch64
-        macosx64-x64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: x86_64
+            - macosx64-aarch64-compiler-rt-13
+            - macosx64-x64-compiler-rt-13
 
 win64-clang-13-raw:
     description: "Clang-cl 13 toolchain build"
@@ -456,18 +407,11 @@ win64-clang-13:
         script: repack-clang-linux-win-cross.sh
         toolchain-alias: win64-clang
         toolchain-artifact: public/build/clang.tar.zst
-    dependencies:
-        win32-compiler-rt-13: toolchain-win32-compiler-rt-13
-        win64-compiler-rt-13: toolchain-win64-compiler-rt-13
     fetches:
         toolchain:
             - win64-clang-13-raw
-        win32-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: x86
-        win64-compiler-rt-13:
-            - artifact: compiler-rt.tar.zst
-              dest: x86_64
+            - win32-compiler-rt-13
+            - win64-compiler-rt-13
 
 win64-clang-13-stage1:
     description: "Clang-cl 13 toolchain build stage 1"
