--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -149,6 +149,7 @@ linux64-clang-13-profile:
             - clang-13
         toolchain:
             - linux64-clang-13-stage1
+            - linux64-x64-compiler-rt-13
             - linux64-toolchain-sysroot
 
 linux64-clang-13:
@@ -189,7 +190,7 @@ linux64-clang-13-android-cross:
         symbol: TL(clang13-android)
     run:
         using: toolchain-script
-        script: repack-clang-linux-cross.sh
+        script: repack-clang.sh
         toolchain-alias: linux64-clang-android-cross
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
@@ -208,7 +209,7 @@ linux64-clang-13-aarch64-cross:
     worker:
         max-run-time: 600
     run:
-        script: repack-clang-linux-cross.sh
+        script: repack-clang.sh
         toolchain-alias: linux64-clang-aarch64-cross
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
@@ -224,7 +225,7 @@ linux64-clang-13-macosx-cross:
     worker:
         max-run-time: 600
     run:
-        script: repack-clang-linux-macosx-cross.sh
+        script: repack-clang.sh
         toolchain-alias: linux64-clang-macosx-cross
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
@@ -242,7 +243,7 @@ linux64-clang-13-win-cross:
     worker:
         max-run-time: 600
     run:
-        script: repack-clang-linux-win-cross.sh
+        script: repack-clang.sh
         toolchain-alias: linux64-clang-win-cross
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
@@ -276,9 +277,10 @@ macosx64-clang-13-raw:
             - clang-13
         toolchain:
             - linux64-cctools-port
-            - linux64-clang-13-macosx-cross
+            - linux64-clang-13-stage1
             - linux64-clang-13-profile
             - macosx64-sdk-11.0
+            - macosx64-x64-compiler-rt-13
             - wasm32-wasi-compiler-rt-13
 
 macosx64-clang-13:
@@ -293,7 +295,7 @@ macosx64-clang-13:
     run-on-projects:
         - trunk
     run:
-        script: repack-clang-linux-macosx-cross.sh
+        script: repack-clang.sh
         toolchain-alias:
             - macosx64-clang
             - macosx64-clang-toolchain
@@ -332,9 +334,10 @@ macosx64-aarch64-clang-13-raw:
             - clang-13
         toolchain:
             - linux64-cctools-port
-            - linux64-clang-13-macosx-cross
+            - linux64-clang-13-stage1
             - linux64-clang-13-profile
             - macosx64-sdk-11.0
+            - macosx64-aarch64-compiler-rt-13
             - wasm32-wasi-compiler-rt-13
 
 macosx64-aarch64-clang-13:
@@ -349,7 +352,7 @@ macosx64-aarch64-clang-13:
     run-on-projects:
         - trunk
     run:
-        script: repack-clang-linux-macosx-cross.sh
+        script: repack-clang.sh
         toolchain-alias: macosx64-aarch64-clang
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
@@ -391,6 +394,7 @@ win64-clang-13-raw:
         toolchain:
             - win64-clang-13-stage1
             - wasm32-wasi-compiler-rt-13
+            - win64-compiler-rt-13
 
 win64-clang-13:
     description: "Clang-cl 13 toolchain build"
@@ -404,7 +408,7 @@ win64-clang-13:
     run-on-projects:
         - trunk
     run:
-        script: repack-clang-linux-win-cross.sh
+        script: repack-clang.sh
         toolchain-alias: win64-clang
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
