--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -152,15 +152,11 @@ linux64-clang-13-profile:
             - linux64-x64-compiler-rt-13
             - linux64-toolchain-sysroot
 
-linux64-clang-13:
+linux64-clang-13-raw:
     description: "Clang 13 toolchain build"
-    attributes:
-        local-toolchain: true
     treeherder:
-        symbol: TL(clang13)
-    run-on-projects: [trunk]
+        symbol: TL(clang13-raw)
     run:
-        using: toolchain-script
         script: build-clang.sh
         arguments:
             - 'build/build-clang/linux64.json'
@@ -172,8 +168,6 @@ linux64-clang-13:
             - 'build/build-clang/clang-13.json'
             - 'build/build-clang/skip-3-stages.json'
             - 'build/build-clang/4stages-pgo.json'
-        toolchain-alias:
-            - linux64-clang
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
         fetch:
@@ -182,73 +176,36 @@ linux64-clang-13:
             - linux64-clang-13-stage1
             - linux64-clang-13-profile
             - linux64-toolchain-sysroot
-            - wasm32-wasi-compiler-rt-13
 
-linux64-clang-13-android-cross:
+linux64-clang-13:
     description: "Clang 13 toolchain build"
+    attributes:
+        local-toolchain: true
     treeherder:
-        symbol: TL(clang13-android)
-    run:
-        using: toolchain-script
-        script: repack-clang.sh
-        toolchain-alias: linux64-clang-android-cross
-        toolchain-artifact: public/build/clang.tar.zst
-    fetches:
-        toolchain:
-            - linux64-clang-13
-            - android-aarch64-compiler-rt-13
-            - android-arm-compiler-rt-13
-            - android-x86-compiler-rt-13
-            - android-x64-compiler-rt-13
-
-linux64-clang-13-aarch64-cross:
-    description: "Clang 13 toolchain build with aarch64 runtime"
-    treeherder:
-        symbol: TL(clang13-aarch64)
+        symbol: TL(clang13)
     worker-type: b-linux
     worker:
         max-run-time: 600
+    run-on-projects: [trunk]
     run:
         script: repack-clang.sh
-        toolchain-alias: linux64-clang-aarch64-cross
-        toolchain-artifact: public/build/clang.tar.zst
-    fetches:
-        toolchain:
-            - linux64-clang-13
-            - linux64-aarch64-compiler-rt-13
-
-linux64-clang-13-macosx-cross:
-    description: "Clang 13 toolchain repack with MacOS Compiler RT libs"
-    treeherder:
-        symbol: TL(clang13-macosx-cross)
-    worker-type: b-linux
-    worker:
-        max-run-time: 600
-    run:
-        script: repack-clang.sh
-        toolchain-alias: linux64-clang-macosx-cross
+        toolchain-alias:
+            - linux64-clang
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
         toolchain:
             - linux64-cctools-port
-            - linux64-clang-13
+            - linux64-clang-13-raw
+            - android-aarch64-compiler-rt-13
+            - android-arm-compiler-rt-13
+            - android-x64-compiler-rt-13
+            - android-x86-compiler-rt-13
+            - linux64-aarch64-compiler-rt-13
+            - linux64-x64-compiler-rt-13
+            - linux64-x86-compiler-rt-13
             - macosx64-aarch64-compiler-rt-13
             - macosx64-x64-compiler-rt-13
-
-linux64-clang-13-win-cross:
-    description: "Clang 13 toolchain repack with Windows Compiler RT libs"
-    treeherder:
-        symbol: TL(clang13-win-cross)
-    worker-type: b-linux
-    worker:
-        max-run-time: 600
-    run:
-        script: repack-clang.sh
-        toolchain-alias: linux64-clang-win-cross
-        toolchain-artifact: public/build/clang.tar.zst
-    fetches:
-        toolchain:
-            - linux64-clang-13
+            - wasm32-wasi-compiler-rt-13
             - win32-compiler-rt-13
             - win64-compiler-rt-13
 
@@ -281,7 +238,6 @@ macosx64-clang-13-raw:
             - linux64-clang-13-profile
             - macosx64-sdk-11.0
             - macosx64-x64-compiler-rt-13
-            - wasm32-wasi-compiler-rt-13
 
 macosx64-clang-13:
     description: "Clang 13 toolchain repack with MacOS Compiler RT libs"
@@ -304,8 +260,18 @@ macosx64-clang-13:
         toolchain:
             - linux64-cctools-port
             - macosx64-clang-13-raw
+            - android-aarch64-compiler-rt-13
+            - android-arm-compiler-rt-13
+            - android-x64-compiler-rt-13
+            - android-x86-compiler-rt-13
+            - linux64-aarch64-compiler-rt-13
+            - linux64-x64-compiler-rt-13
+            - linux64-x86-compiler-rt-13
             - macosx64-aarch64-compiler-rt-13
             - macosx64-x64-compiler-rt-13
+            - wasm32-wasi-compiler-rt-13
+            - win32-compiler-rt-13
+            - win64-compiler-rt-13
 
 macosx64-aarch64-clang-13-raw:
     description: "Clang 13 toolchain build"
@@ -338,7 +304,6 @@ macosx64-aarch64-clang-13-raw:
             - linux64-clang-13-profile
             - macosx64-sdk-11.0
             - macosx64-aarch64-compiler-rt-13
-            - wasm32-wasi-compiler-rt-13
 
 macosx64-aarch64-clang-13:
     description: "Clang 13 toolchain repack with MacOS Compiler RT libs"
@@ -361,6 +326,7 @@ macosx64-aarch64-clang-13:
             - macosx64-aarch64-clang-13-raw
             - macosx64-aarch64-compiler-rt-13
             - macosx64-x64-compiler-rt-13
+            - wasm32-wasi-compiler-rt-13
 
 win64-clang-13-raw:
     description: "Clang-cl 13 toolchain build"
@@ -393,7 +359,6 @@ win64-clang-13-raw:
             - ninja
         toolchain:
             - win64-clang-13-stage1
-            - wasm32-wasi-compiler-rt-13
             - win64-compiler-rt-13
 
 win64-clang-13:
@@ -413,7 +378,18 @@ win64-clang-13:
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
         toolchain:
+            - linux64-cctools-port
             - win64-clang-13-raw
+            - android-aarch64-compiler-rt-13
+            - android-arm-compiler-rt-13
+            - android-x64-compiler-rt-13
+            - android-x86-compiler-rt-13
+            - linux64-aarch64-compiler-rt-13
+            - linux64-x64-compiler-rt-13
+            - linux64-x86-compiler-rt-13
+            - macosx64-aarch64-compiler-rt-13
+            - macosx64-x64-compiler-rt-13
+            - wasm32-wasi-compiler-rt-13
             - win32-compiler-rt-13
             - win64-compiler-rt-13
 
