--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -149,14 +149,17 @@ linux64-clang-13-profile:
             - clang-13
         toolchain:
             - linux64-clang-13-stage1
-            - linux64-x64-compiler-rt-13
             - linux64-toolchain-sysroot
 
-linux64-clang-13-raw:
+linux64-clang-13:
     description: "Clang 13 toolchain build"
+    attributes:
+        local-toolchain: true
     treeherder:
-        symbol: TL(clang13-raw)
+        symbol: TL(clang13)
+    run-on-projects: [trunk]
     run:
+        using: toolchain-script
         script: build-clang.sh
         arguments:
             - 'build/build-clang/linux64.json'
@@ -168,6 +171,8 @@ linux64-clang-13-raw:
             - 'build/build-clang/clang-13.json'
             - 'build/build-clang/skip-3-stages.json'
             - 'build/build-clang/4stages-pgo.json'
+        toolchain-alias:
+            - linux64-clang
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
         fetch:
@@ -176,38 +181,110 @@ linux64-clang-13-raw:
             - linux64-clang-13-stage1
             - linux64-clang-13-profile
             - linux64-toolchain-sysroot
+            - wasm32-wasi-compiler-rt-13
 
-linux64-clang-13:
+linux64-clang-13-android-cross:
     description: "Clang 13 toolchain build"
-    attributes:
-        local-toolchain: true
     treeherder:
-        symbol: TL(clang13)
+        symbol: TL(clang13-android)
+    run:
+        using: toolchain-script
+        script: repack-clang-linux-cross.sh
+        arguments:
+            - aarch64
+            - arm
+            - x86
+            - x64
+        toolchain-alias: linux64-clang-android-cross
+        toolchain-artifact: public/build/clang.tar.zst
+    dependencies:
+        android-aarch64-compiler-rt-13: toolchain-android-aarch64-compiler-rt-13
+        android-arm-compiler-rt-13: toolchain-android-arm-compiler-rt-13
+        android-x86-compiler-rt-13: toolchain-android-x86-compiler-rt-13
+        android-x64-compiler-rt-13: toolchain-android-x64-compiler-rt-13
+    fetches:
+        toolchain:
+            - linux64-clang-13
+        android-aarch64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: aarch64
+        android-arm-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: arm
+        android-x86-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: x86
+        android-x64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: x64
+
+linux64-clang-13-aarch64-cross:
+    description: "Clang 13 toolchain build with aarch64 runtime"
+    treeherder:
+        symbol: TL(clang13-aarch64)
     worker-type: b-linux
     worker:
         max-run-time: 600
-    run-on-projects: [trunk]
     run:
-        script: repack-clang.sh
-        toolchain-alias:
-            - linux64-clang
+        script: repack-clang-linux-cross.sh
+        toolchain-alias: linux64-clang-aarch64-cross
         toolchain-artifact: public/build/clang.tar.zst
+    dependencies:
+        linux64-aarch64-compiler-rt-13: toolchain-linux64-aarch64-compiler-rt-13
+    fetches:
+        toolchain:
+            - linux64-clang-13
+        linux64-aarch64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+
+linux64-clang-13-macosx-cross:
+    description: "Clang 13 toolchain repack with MacOS Compiler RT libs"
+    treeherder:
+        symbol: TL(clang13-macosx-cross)
+    worker-type: b-linux
+    worker:
+        max-run-time: 600
+    run:
+        script: repack-clang-linux-macosx-cross.sh
+        toolchain-alias: linux64-clang-macosx-cross
+        toolchain-artifact: public/build/clang.tar.zst
+    dependencies:
+        macosx64-aarch64-compiler-rt-13: toolchain-macosx64-aarch64-compiler-rt-13
+        macosx64-x64-compiler-rt-13: toolchain-macosx64-x64-compiler-rt-13
     fetches:
         toolchain:
             - linux64-cctools-port
-            - linux64-clang-13-raw
-            - android-aarch64-compiler-rt-13
-            - android-arm-compiler-rt-13
-            - android-x64-compiler-rt-13
-            - android-x86-compiler-rt-13
-            - linux64-aarch64-compiler-rt-13
-            - linux64-x64-compiler-rt-13
-            - linux64-x86-compiler-rt-13
-            - macosx64-aarch64-compiler-rt-13
-            - macosx64-x64-compiler-rt-13
-            - wasm32-wasi-compiler-rt-13
-            - win32-compiler-rt-13
-            - win64-compiler-rt-13
+            - linux64-clang-13
+        macosx64-aarch64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: aarch64
+        macosx64-x64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: x86_64
+
+linux64-clang-13-win-cross:
+    description: "Clang 13 toolchain repack with Windows Compiler RT libs"
+    treeherder:
+        symbol: TL(clang13-win-cross)
+    worker-type: b-linux
+    worker:
+        max-run-time: 600
+    run:
+        script: repack-clang-linux-win-cross.sh
+        toolchain-alias: linux64-clang-win-cross
+        toolchain-artifact: public/build/clang.tar.zst
+    dependencies:
+        win32-compiler-rt-13: toolchain-win32-compiler-rt-13
+        win64-compiler-rt-13: toolchain-win64-compiler-rt-13
+    fetches:
+        toolchain:
+            - linux64-clang-13
+        win32-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: x86
+        win64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: x86_64
 
 macosx64-clang-13-raw:
     description: "Clang 13 toolchain build"
@@ -234,10 +311,10 @@ macosx64-clang-13-raw:
             - clang-13
         toolchain:
             - linux64-cctools-port
-            - linux64-clang-13-stage1
+            - linux64-clang-13-macosx-cross
             - linux64-clang-13-profile
             - macosx64-sdk-11.0
-            - macosx64-x64-compiler-rt-13
+            - wasm32-wasi-compiler-rt-13
 
 macosx64-clang-13:
     description: "Clang 13 toolchain repack with MacOS Compiler RT libs"
@@ -251,27 +328,24 @@ macosx64-clang-13:
     run-on-projects:
         - trunk
     run:
-        script: repack-clang.sh
+        script: repack-clang-linux-macosx-cross.sh
         toolchain-alias:
             - macosx64-clang
             - macosx64-clang-toolchain
         toolchain-artifact: public/build/clang.tar.zst
+    dependencies:
+        macosx64-aarch64-compiler-rt-13: toolchain-macosx64-aarch64-compiler-rt-13
+        macosx64-x64-compiler-rt-13: toolchain-macosx64-x64-compiler-rt-13
     fetches:
         toolchain:
             - linux64-cctools-port
             - macosx64-clang-13-raw
-            - android-aarch64-compiler-rt-13
-            - android-arm-compiler-rt-13
-            - android-x64-compiler-rt-13
-            - android-x86-compiler-rt-13
-            - linux64-aarch64-compiler-rt-13
-            - linux64-x64-compiler-rt-13
-            - linux64-x86-compiler-rt-13
-            - macosx64-aarch64-compiler-rt-13
-            - macosx64-x64-compiler-rt-13
-            - wasm32-wasi-compiler-rt-13
-            - win32-compiler-rt-13
-            - win64-compiler-rt-13
+        macosx64-aarch64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: aarch64
+        macosx64-x64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: x86_64
 
 macosx64-aarch64-clang-13-raw:
     description: "Clang 13 toolchain build"
@@ -300,10 +374,10 @@ macosx64-aarch64-clang-13-raw:
             - clang-13
         toolchain:
             - linux64-cctools-port
-            - linux64-clang-13-stage1
+            - linux64-clang-13-macosx-cross
             - linux64-clang-13-profile
             - macosx64-sdk-11.0
-            - macosx64-aarch64-compiler-rt-13
+            - wasm32-wasi-compiler-rt-13
 
 macosx64-aarch64-clang-13:
     description: "Clang 13 toolchain repack with MacOS Compiler RT libs"
@@ -317,16 +391,22 @@ macosx64-aarch64-clang-13:
     run-on-projects:
         - trunk
     run:
-        script: repack-clang.sh
+        script: repack-clang-linux-macosx-cross.sh
         toolchain-alias: macosx64-aarch64-clang
         toolchain-artifact: public/build/clang.tar.zst
+    dependencies:
+        macosx64-aarch64-compiler-rt-13: toolchain-macosx64-aarch64-compiler-rt-13
+        macosx64-x64-compiler-rt-13: toolchain-macosx64-x64-compiler-rt-13
     fetches:
         toolchain:
             - linux64-cctools-port
             - macosx64-aarch64-clang-13-raw
-            - macosx64-aarch64-compiler-rt-13
-            - macosx64-x64-compiler-rt-13
-            - wasm32-wasi-compiler-rt-13
+        macosx64-aarch64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: aarch64
+        macosx64-x64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: x86_64
 
 win64-clang-13-raw:
     description: "Clang-cl 13 toolchain build"
@@ -359,7 +439,7 @@ win64-clang-13-raw:
             - ninja
         toolchain:
             - win64-clang-13-stage1
-            - win64-compiler-rt-13
+            - wasm32-wasi-compiler-rt-13
 
 win64-clang-13:
     description: "Clang-cl 13 toolchain build"
@@ -373,25 +453,21 @@ win64-clang-13:
     run-on-projects:
         - trunk
     run:
-        script: repack-clang.sh
+        script: repack-clang-linux-win-cross.sh
         toolchain-alias: win64-clang
         toolchain-artifact: public/build/clang.tar.zst
+    dependencies:
+        win32-compiler-rt-13: toolchain-win32-compiler-rt-13
+        win64-compiler-rt-13: toolchain-win64-compiler-rt-13
     fetches:
         toolchain:
-            - linux64-cctools-port
             - win64-clang-13-raw
-            - android-aarch64-compiler-rt-13
-            - android-arm-compiler-rt-13
-            - android-x64-compiler-rt-13
-            - android-x86-compiler-rt-13
-            - linux64-aarch64-compiler-rt-13
-            - linux64-x64-compiler-rt-13
-            - linux64-x86-compiler-rt-13
-            - macosx64-aarch64-compiler-rt-13
-            - macosx64-x64-compiler-rt-13
-            - wasm32-wasi-compiler-rt-13
-            - win32-compiler-rt-13
-            - win64-compiler-rt-13
+        win32-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: x86
+        win64-compiler-rt-13:
+            - artifact: compiler-rt.tar.zst
+              dest: x86_64
 
 win64-clang-13-stage1:
     description: "Clang-cl 13 toolchain build stage 1"
