Bug 1754781 - Remove the xpcshell global skip for Android and move that into tests instead r=gerald
Differential Revision: https://phabricator.services.mozilla.com/D138768

UltraBlame original commit: 8eda3ffd476aa5da2104f6b31e65402a9b2ae639

--- a/tools/profiler/tests/xpcshell/xpcshell.ini
+++ b/tools/profiler/tests/xpcshell/xpcshell.ini
@@ -2,33 +2,50 @@
 head = head.js
 support-files =
   ../shared-head.js
-skip-if = toolkit == 'android'
 
 [test_active_configuration.js]
+skip-if = toolkit == 'android'
 [test_addProfilerMarker.js]
+skip-if = toolkit == 'android'
 [test_start.js]
 skip-if = true
 [test_get_features.js]
+skip-if = toolkit == 'android'
 [test_responsiveness.js]
-skip-if = tsan # Times out on TSan, bug 1612707
+skip-if =
+  tsan # Times out on TSan, bug 1612707
+  toolkit == 'android'
 [test_shared_library.js]
+skip-if = toolkit == 'android'
 [test_run.js]
 skip-if = true
 [test_pause.js]
+skip-if = toolkit == 'android'
 [test_enterjit_osr.js]
-skip-if = (os == "win" && processor == "aarch64") # aarch64 due to 1536652
+skip-if =
+  (os == "win" && processor == "aarch64") # aarch64 due to 1536652
+  toolkit == 'android'
 [test_enterjit_osr_disabling.js]
-skip-if = !debug
+skip-if =
+  !debug
+  toolkit == 'android'
 [test_enterjit_osr_enabling.js]
-skip-if = !debug
+skip-if =
+  !debug
+  toolkit == 'android'
 [test_asm.js]
+skip-if = toolkit == 'android'
 [test_feature_mainthreadio.js]
 skip-if =
   release_or_beta
   (os == "win" && processor == "aarch64") # The IOInterposer is in an ifdef, aarch64 due to 1536657
   (os == "win" && socketprocess_networking)
+  toolkit == 'android'
 [test_feature_fileioall.js]
-skip-if = release_or_beta || (os == "win" && processor == "aarch64") # The IOInterposer is in an ifdef, aarch64 due to 1536657
+skip-if =
+  release_or_beta
+  (os == "win" && processor == "aarch64") # The IOInterposer is in an ifdef, aarch64 due to 1536657
+  toolkit == 'android'
 
 # The sanitizer checks appears to overwrite our own memory hooks in xpcshell tests,
 # and no allocation markers are gathered. Skip this test in that configuration.
@@ -37,6 +54,7 @@ skip-if =
   asan
   tsan
   socketprocess_networking
+  toolkit == 'android'
 
 # Native stackwalking is somewhat unreliable depending on the platform.
 #
@@ -49,13 +67,26 @@ skip-if =
 # For sanitizer builds, there were many intermittents, and we're not getting much
 # additional coverage there, so it's better to be a bit more reliable.
 [test_feature_stackwalking.js]
-skip-if = (os == "mac" && release_or_beta) || (os == "linux" && release_or_beta && !debug) || asan || tsan
+skip-if =
+  (os == "mac" && release_or_beta)
+  (os == "linux" && release_or_beta && !debug)
+  asan
+  tsan
+  toolkit == 'android'
 
 [test_feature_js.js]
-skip-if = tsan # Times out on TSan, bug 1612707
+skip-if =
+  tsan # Times out on TSan, bug 1612707
+  toolkit == 'android'
 
 # See the comment on test_feature_stackwalking.js
 [test_merged_stacks.js]
-skip-if = (os == "mac" && release_or_beta) || (os == "linux" && release_or_beta && !debug) || asan || tsan
+skip-if =
+  (os == "mac" && release_or_beta)
+  (os == "linux" && release_or_beta && !debug)
+  asan
+  tsan
+  toolkit == 'android'
 
 [test_assertion_helper.js]
+skip-if = toolkit == 'android'
