--- a/tools/profiler/tests/xpcshell/xpcshell.ini
+++ b/tools/profiler/tests/xpcshell/xpcshell.ini
@@ -4,48 +4,32 @@ support-files =
   ../shared-head.js
 
 [test_active_configuration.js]
-skip-if = toolkit == 'android'
 [test_addProfilerMarker.js]
-skip-if = toolkit == 'android'
 [test_start.js]
 skip-if = true
 [test_get_features.js]
-skip-if = toolkit == 'android'
 [test_responsiveness.js]
-skip-if =
-  tsan # Times out on TSan, bug 1612707
-  toolkit == 'android'
+skip-if = tsan # Times out on TSan, bug 1612707
 [test_shared_library.js]
-skip-if = toolkit == 'android'
 [test_run.js]
 skip-if = true
 [test_pause.js]
-skip-if = toolkit == 'android'
 [test_enterjit_osr.js]
-skip-if =
-  (os == "win" && processor == "aarch64") # aarch64 due to 1536652
-  toolkit == 'android'
+skip-if = (os == "win" && processor == "aarch64") # aarch64 due to 1536652
 [test_enterjit_osr_disabling.js]
-skip-if =
-  !debug
-  toolkit == 'android'
+skip-if = !debug
 [test_enterjit_osr_enabling.js]
-skip-if =
-  !debug
-  toolkit == 'android'
+skip-if = !debug
 [test_asm.js]
-skip-if = toolkit == 'android'
 [test_feature_mainthreadio.js]
 skip-if =
   release_or_beta
   (os == "win" && processor == "aarch64") # The IOInterposer is in an ifdef, aarch64 due to 1536657
   (os == "win" && socketprocess_networking)
-  toolkit == 'android'
 [test_feature_fileioall.js]
 skip-if =
   release_or_beta
   (os == "win" && processor == "aarch64") # The IOInterposer is in an ifdef, aarch64 due to 1536657
-  toolkit == 'android'
 
 # The sanitizer checks appears to overwrite our own memory hooks in xpcshell tests,
 # and no allocation markers are gathered. Skip this test in that configuration.
@@ -54,7 +38,6 @@ skip-if =
   asan
   tsan
   socketprocess_networking
-  toolkit == 'android'
 
 # Native stackwalking is somewhat unreliable depending on the platform.
 #
@@ -72,12 +55,9 @@ skip-if =
   (os == "linux" && release_or_beta && !debug)
   asan
   tsan
-  toolkit == 'android'
 
 [test_feature_js.js]
-skip-if =
-  tsan # Times out on TSan, bug 1612707
-  toolkit == 'android'
+skip-if = tsan # Times out on TSan, bug 1612707
 
 # See the comment on test_feature_stackwalking.js
 [test_merged_stacks.js]
@@ -86,10 +66,7 @@ skip-if =
   (os == "linux" && release_or_beta && !debug)
   asan
   tsan
-  toolkit == 'android'
 
 [test_assertion_helper.js]
-skip-if = toolkit == 'android'
-
 [test_feature_java.js]
 skip-if = toolkit != 'android'
