--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -755,6 +755,11 @@ support-files =
   file_js_cache_save_after_load.js
   file_js_cache_syntax_error.html
   file_js_cache_syntax_error.js
+[test_delazification_strategy.html]
+skip-if = verify
+support-files =
+  file_delazification_strategy.html
+  file_delazification_strategy.js
 [test_setInterval_from_start.html]
 [test_setInterval_uncatchable_exception.html]
 skip-if = debug == false
