Backed out 2 changesets (bug 1734886) for causing Hazard bustages at TransformStream.cpp. CLOSED TREE
Backed out changeset 874b3fe4de86 (bug 1734886)
Backed out changeset 9d43d0e3ba23 (bug 1734886)

UltraBlame original commit: b27d027a75f46e3403e98d99db8c5d0f9db73b90

--- a/testing/web-platform/meta/streams/transform-streams/general.any.js.ini
+++ b/testing/web-platform/meta/streams/transform-streams/general.any.js.ini
@@ -53,6 +53,12 @@
   [start() should not be called twice]
     expected: FAIL
 
+  [specifying a defined readableType should throw]
+    expected: FAIL
+
+  [specifying a defined writableType should throw]
+    expected: FAIL
+
   [Subclassing TransformStream should work]
     expected: FAIL
 
@@ -110,6 +116,12 @@
     expected: FAIL
 
   [start() should not be called twice]
+    expected: FAIL
+
+  [specifying a defined readableType should throw]
+    expected: FAIL
+
+  [specifying a defined writableType should throw]
     expected: FAIL
 
   [Subclassing TransformStream should work]
@@ -171,6 +183,12 @@
   [start() should not be called twice]
     expected: FAIL
 
+  [specifying a defined readableType should throw]
+    expected: FAIL
+
+  [specifying a defined writableType should throw]
+    expected: FAIL
+
   [Subclassing TransformStream should work]
     expected: FAIL
 
@@ -228,6 +246,12 @@
     expected: FAIL
 
   [start() should not be called twice]
+    expected: FAIL
+
+  [specifying a defined readableType should throw]
+    expected: FAIL
+
+  [specifying a defined writableType should throw]
     expected: FAIL
 
   [Subclassing TransformStream should work]
