Bug 1751721 - Add Zoom to the OffscreenCanvas domain allowlist and turn it on for users. r=gfx-reviewers,lsalzman,jgilbert
This will allow users to use gallery view with the web client for Zoom
in Firefox.

Differential Revision: https://phabricator.services.mozilla.com/D136836

UltraBlame original commit: 430986e11fd2eb42d50e592a50c8d195776e6c60

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3465,7 +3465,7 @@
 
 - name: dom.workers.requestAnimationFrame
   type: RelaxedAtomicBool
-  value: false
+  value: true
   mirror: always
 
 - name: dom.workers.serialized-sab-access
@@ -5495,13 +5495,13 @@
 # Enable OffscreenCanvas based on the domain allowlist.
 - name: gfx.offscreencanvas.domain-enabled
   type: RelaxedAtomicBool
-  value: false
+  value: true
   mirror: always
 
 # Domains included in the allowlist.
 - name: gfx.offscreencanvas.domain-allowlist
   type: String
-  value: ""
+  value: "*.zoom.us"
   mirror: never
 
 - name: gfx.omta.background-color
