Bug 1755057 - Part 1: Create a feature gate/flag for the best match feature. r=daisuke
This revision involves two prefs:

`browser.urlbar.bestMatch.enabled`

Currently this pref corresponds to the user's choice of whether to enable best
matches. This revision changes its meaning so that it's now the gate for the
whole best match feature. If it's false, then the best match preferences UI will
not appear and best matches will not appear in the urlbar. If it's true, then
the preferences UI will appear, and the second pref below controls whether best
matches will appear in the urlbar.

`browser.urlbar.suggest.bestmatch`

This new pref takes on the old meaning of the first pref: It corresponds to
whether the user has enabled best matches.

With these two prefs, we have a similar setup to the quick suggest prefs: one
pref for the whole feature, `quickSuggest.enabled`, and another pref for whether
quick suggest results will appear in the urlbar -- actually two prefs since
there are two kinds of quick suggest results, `suggest.quicksuggest.sponsored`
and `suggest.quicksuggest.nonsponsored`.

Also, Product says best match should be enabled by default (see
"design/interaction notes" at the bottom of [this Figma](https://www.figma.com/file/seJ2ZA4v3FgoV7jCxUR74B/Firefox-Suggest?node-id=6011%3A7701)),
so I set the default value of `browser.urlbar.suggest.bestmatch` to true, which
means it will be enabled by default when the feature gate is enabled.

Part 2 of this bug will update the preferences UI.

Differential Revision: https://phabricator.services.mozilla.com/D138583

UltraBlame original commit: dd9ce26c988ee7c1442d07db0d655a78977bf225

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -36,7 +36,7 @@ urlbar:
     bestMatchEnabled:
       type: boolean
       fallbackPref: browser.urlbar.bestMatch.enabled
-      description: Whether best match results are enabled
+      description: Gate for the best match feature. If false, the best match preferences UI and best match suggestions will not be shown. If true, the preferences UI will be shown, and the user can turn best match suggestions on or off.
     merinoClientVariants:
       type: string
       fallbackPref: browser.urlbar.merino.clientVariants
@@ -57,7 +57,7 @@ urlbar:
     quickSuggestEnabled:
       type: boolean
       fallbackPref: browser.urlbar.quicksuggest.enabled
-      description: Global toggle for the QuickSuggest feature
+      description: Gate for the Firefox Suggest feature as a whole. If false, the Firefox Suggest preferences UI and Suggest suggestions will not be shown. If true, the preferences UI will be shown, and the user can turn suggestions on or off.
     quickSuggestNonSponsoredIndex:
       type: int
       fallbackPref: browser.urlbar.quicksuggest.nonSponsoredIndex
