Bug 1754650 - Update probes expiring in Firefox 100: WEBAUTHN_* r=chutten
Updating these probes and also changing the notification email to mine because jc has left and I took over webauthn.

Differential Revision: https://phabricator.services.mozilla.com/D138774

UltraBlame original commit: 2fa5f2446828c328c473c78d108de9ecfbb4fbb4

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -1219,16 +1219,17 @@ security:
       - 1558870
       - 1630155
       - 1689269
+      - 1754650
     description: >
       Counts of how often Web Authentication was used in this session, keyed
       by authenticator protocol, method and result. Currently: U2FRegisterFinish,
       U2FRegisterAbort, U2FSignFinish, U2FSignAbort.
-    expires: "100"
+    expires: "112"
     kind: uint
     keyed: true
     notification_emails:
       - seceng-telemetry@mozilla.com
-      - jjones@mozilla.com
+      - rmf@mozilla.com
     release_channel_collection: opt-out
     products:
       - 'firefox'
