Bug 1755315 - Add more convenient accessors for widget screen to chrome code. r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D138662

UltraBlame original commit: aba4c44e56a128edfd7106bfb057a891c7de105c

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -2083,3 +2083,5 @@ addExternalIface('nsIGleanPing', headerFile='mozilla/glean/bindings/Ping.h',
 addExternalIface('nsISessionStoreRestoreData',
                  nativeType='nsISessionStoreRestoreData',
                  headerFile='nsISessionStoreRestoreData.h', notflattened=True)
+addExternalIface('nsIScreen', nativeType='nsIScreen',
+                 headerFile='nsIScreen.h', notflattened=True)
