Bug 1653486 - Replace all non-user-facing references to "master" password. r=dimi,tgiles,preferences-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D138113

UltraBlame original commit: 2b784d470808c8598238e420695b4a1d0861f21d

--- a/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
+++ b/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
@@ -192,12 +192,12 @@ skip-if = xorigin
 [test_LoginManagerContent_passwordEditedOrGenerated.html]
 scheme = https
 skip-if = toolkit == 'android' # password generation
-[test_master_password.html]
+[test_primary_password.html]
 scheme = https
 skip-if = os != 'mac' || verify || xorigin # Tests desktop prompts and bug 1333264
 support-files =
   chrome_timeout.js
-  subtst_master_pass.html
+  subtst_primary_pass.html
 [test_maxlength.html]
 [test_munged_values.html]
 scheme = https
