--- a/browser/components/preferences/tests/browser.ini
+++ b/browser/components/preferences/tests/browser.ini
@@ -85,7 +85,7 @@ skip-if = tsan || ccov && (os == 'linux' || os == 'win') # Linux: bug 1613530, W
 skip-if = tsan || (!debug && os == 'win') # Bug 1518370
 [browser_layersacceleration.js]
 [browser_localSearchShortcuts.js]
-[browser_masterpassword.js]
+[browser_primaryPassword.js]
 [browser_newtab_menu.js]
 [browser_notifications_do_not_disturb.js]
 [browser_open_download_preferences.js]
