Backed out changeset 21d7dfa0dfee (bug 1734241) for causing bp-hybrid bustages on ReadableStreamPipeTo.cpp. CLOSED TREE
UltraBlame original commit: af27e120eca0fa9cdc1116e8bd022ac9e7698c49

--- a/testing/web-platform/meta/streams/piping/throwing-options.any.js.ini
+++ b/testing/web-platform/meta/streams/piping/throwing-options.any.js.ini
@@ -1,11 +1,23 @@
 [throwing-options.any.worker.html]
+  [pipeTo should stop after getting preventAbort throws]
+    expected: FAIL
+
   [pipeThrough should stop after getting preventAbort throws]
+    expected: FAIL
+
+  [pipeTo should stop after getting preventCancel throws]
     expected: FAIL
 
   [pipeThrough should stop after getting preventCancel throws]
     expected: FAIL
 
+  [pipeTo should stop after getting preventClose throws]
+    expected: FAIL
+
   [pipeThrough should stop after getting preventClose throws]
+    expected: FAIL
+
+  [pipeTo should stop after getting signal throws]
     expected: FAIL
 
   [pipeThrough should stop after getting signal throws]
@@ -13,13 +25,25 @@
 
 
 [throwing-options.any.html]
+  [pipeTo should stop after getting preventAbort throws]
+    expected: FAIL
+
   [pipeThrough should stop after getting preventAbort throws]
+    expected: FAIL
+
+  [pipeTo should stop after getting preventCancel throws]
     expected: FAIL
 
   [pipeThrough should stop after getting preventCancel throws]
     expected: FAIL
 
+  [pipeTo should stop after getting preventClose throws]
+    expected: FAIL
+
   [pipeThrough should stop after getting preventClose throws]
+    expected: FAIL
+
+  [pipeTo should stop after getting signal throws]
     expected: FAIL
 
   [pipeThrough should stop after getting signal throws]
@@ -27,13 +51,25 @@
 
 
 [throwing-options.any.sharedworker.html]
+  [pipeTo should stop after getting preventAbort throws]
+    expected: FAIL
+
   [pipeThrough should stop after getting preventAbort throws]
+    expected: FAIL
+
+  [pipeTo should stop after getting preventCancel throws]
     expected: FAIL
 
   [pipeThrough should stop after getting preventCancel throws]
     expected: FAIL
 
+  [pipeTo should stop after getting preventClose throws]
+    expected: FAIL
+
   [pipeThrough should stop after getting preventClose throws]
+    expected: FAIL
+
+  [pipeTo should stop after getting signal throws]
     expected: FAIL
 
   [pipeThrough should stop after getting signal throws]
@@ -41,13 +77,25 @@
 
 
 [throwing-options.any.serviceworker.html]
+  [pipeTo should stop after getting preventAbort throws]
+    expected: FAIL
+
   [pipeThrough should stop after getting preventAbort throws]
+    expected: FAIL
+
+  [pipeTo should stop after getting preventCancel throws]
     expected: FAIL
 
   [pipeThrough should stop after getting preventCancel throws]
     expected: FAIL
 
+  [pipeTo should stop after getting preventClose throws]
+    expected: FAIL
+
   [pipeThrough should stop after getting preventClose throws]
+    expected: FAIL
+
+  [pipeTo should stop after getting signal throws]
     expected: FAIL
 
   [pipeThrough should stop after getting signal throws]
