--- a/testing/web-platform/meta/streams/idlharness.any.js.ini
+++ b/testing/web-platform/meta/streams/idlharness.any.js.ini
@@ -151,6 +151,9 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: operation pipeTo(WritableStream, optional StreamPipeOptions)]
+    expected: FAIL
+
   [WritableStreamDefaultWriter interface object length]
     expected:
       if not domstreams: FAIL
@@ -405,6 +408,9 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: calling pipeTo(WritableStream, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
+    expected: FAIL
+
   [ReadableStreamBYOBReader interface: operation releaseLock()]
     expected:
       if not domstreams: FAIL
@@ -416,6 +422,9 @@
   [WritableStream interface: new WritableStream() must inherit property "abort(optional any)" with the proper type]
     expected:
       if not domstreams: FAIL
+
+  [ReadableStream interface: new ReadableStream() must inherit property "pipeTo(WritableStream, optional StreamPipeOptions)" with the proper type]
+    expected: FAIL
 
   [ReadableByteStreamController interface: operation close()]
     expected:
@@ -813,6 +822,9 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: operation pipeTo(WritableStream, optional StreamPipeOptions)]
+    expected: FAIL
+
   [WritableStreamDefaultWriter interface object length]
     expected:
       if not domstreams: FAIL
@@ -1067,6 +1079,9 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: calling pipeTo(WritableStream, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
+    expected: FAIL
+
   [ReadableStreamBYOBReader interface: operation releaseLock()]
     expected:
       if not domstreams: FAIL
@@ -1078,6 +1093,9 @@
   [WritableStream interface: new WritableStream() must inherit property "abort(optional any)" with the proper type]
     expected:
       if not domstreams: FAIL
+
+  [ReadableStream interface: new ReadableStream() must inherit property "pipeTo(WritableStream, optional StreamPipeOptions)" with the proper type]
+    expected: FAIL
 
   [ReadableByteStreamController interface: operation close()]
     expected:
@@ -1475,6 +1493,9 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: operation pipeTo(WritableStream, optional StreamPipeOptions)]
+    expected: FAIL
+
   [WritableStreamDefaultWriter interface object length]
     expected:
       if not domstreams: FAIL
@@ -1729,6 +1750,9 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: calling pipeTo(WritableStream, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
+    expected: FAIL
+
   [ReadableStreamBYOBReader interface: operation releaseLock()]
     expected:
       if not domstreams: FAIL
@@ -1740,6 +1764,9 @@
   [WritableStream interface: new WritableStream() must inherit property "abort(optional any)" with the proper type]
     expected:
       if not domstreams: FAIL
+
+  [ReadableStream interface: new ReadableStream() must inherit property "pipeTo(WritableStream, optional StreamPipeOptions)" with the proper type]
+    expected: FAIL
 
   [ReadableByteStreamController interface: operation close()]
     expected:
@@ -2137,6 +2164,9 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: operation pipeTo(WritableStream, optional StreamPipeOptions)]
+    expected: FAIL
+
   [WritableStreamDefaultWriter interface object length]
     expected:
       if not domstreams: FAIL
@@ -2391,6 +2421,9 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: calling pipeTo(WritableStream, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
+    expected: FAIL
+
   [ReadableStreamBYOBReader interface: operation releaseLock()]
     expected:
       if not domstreams: FAIL
@@ -2402,6 +2435,9 @@
   [WritableStream interface: new WritableStream() must inherit property "abort(optional any)" with the proper type]
     expected:
       if not domstreams: FAIL
+
+  [ReadableStream interface: new ReadableStream() must inherit property "pipeTo(WritableStream, optional StreamPipeOptions)" with the proper type]
+    expected: FAIL
 
   [ReadableByteStreamController interface: operation close()]
     expected:
