Bug 1756188 - Fix JS streams WPT failures. r=mgaudet
Differential Revision: https://phabricator.services.mozilla.com/D139160

UltraBlame original commit: 89189f198494ca54579317b17af978f4259994ee

--- a/testing/web-platform/meta/streams/idlharness.any.js.ini
+++ b/testing/web-platform/meta/streams/idlharness.any.js.ini
@@ -151,6 +151,10 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: operation pipeTo(WritableStream, optional StreamPipeOptions)]
+    expected:
+      if not domstreams: FAIL
+
   [WritableStreamDefaultWriter interface object length]
     expected:
       if not domstreams: FAIL
@@ -405,6 +409,10 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: calling pipeTo(WritableStream, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
+    expected:
+      if not domstreams: FAIL
+
   [ReadableStreamBYOBReader interface: operation releaseLock()]
     expected:
       if not domstreams: FAIL
@@ -414,6 +422,10 @@
       if not domstreams: FAIL
 
   [WritableStream interface: new WritableStream() must inherit property "abort(optional any)" with the proper type]
+    expected:
+      if not domstreams: FAIL
+
+  [ReadableStream interface: new ReadableStream() must inherit property "pipeTo(WritableStream, optional StreamPipeOptions)" with the proper type]
     expected:
       if not domstreams: FAIL
 
@@ -813,6 +825,10 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: operation pipeTo(WritableStream, optional StreamPipeOptions)]
+    expected:
+      if not domstreams: FAIL
+
   [WritableStreamDefaultWriter interface object length]
     expected:
       if not domstreams: FAIL
@@ -1067,6 +1083,10 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: calling pipeTo(WritableStream, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
+    expected:
+      if not domstreams: FAIL
+
   [ReadableStreamBYOBReader interface: operation releaseLock()]
     expected:
       if not domstreams: FAIL
@@ -1076,6 +1096,10 @@
       if not domstreams: FAIL
 
   [WritableStream interface: new WritableStream() must inherit property "abort(optional any)" with the proper type]
+    expected:
+      if not domstreams: FAIL
+
+  [ReadableStream interface: new ReadableStream() must inherit property "pipeTo(WritableStream, optional StreamPipeOptions)" with the proper type]
     expected:
       if not domstreams: FAIL
 
@@ -1475,6 +1499,10 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: operation pipeTo(WritableStream, optional StreamPipeOptions)]
+    expected:
+      if not domstreams: FAIL
+
   [WritableStreamDefaultWriter interface object length]
     expected:
       if not domstreams: FAIL
@@ -1729,6 +1757,10 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: calling pipeTo(WritableStream, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
+    expected:
+      if not domstreams: FAIL
+
   [ReadableStreamBYOBReader interface: operation releaseLock()]
     expected:
       if not domstreams: FAIL
@@ -1738,6 +1770,10 @@
       if not domstreams: FAIL
 
   [WritableStream interface: new WritableStream() must inherit property "abort(optional any)" with the proper type]
+    expected:
+      if not domstreams: FAIL
+
+  [ReadableStream interface: new ReadableStream() must inherit property "pipeTo(WritableStream, optional StreamPipeOptions)" with the proper type]
     expected:
       if not domstreams: FAIL
 
@@ -2137,6 +2173,10 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: operation pipeTo(WritableStream, optional StreamPipeOptions)]
+    expected:
+      if not domstreams: FAIL
+
   [WritableStreamDefaultWriter interface object length]
     expected:
       if not domstreams: FAIL
@@ -2391,6 +2431,10 @@
     expected:
       if not domstreams: FAIL
 
+  [ReadableStream interface: calling pipeTo(WritableStream, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
+    expected:
+      if not domstreams: FAIL
+
   [ReadableStreamBYOBReader interface: operation releaseLock()]
     expected:
       if not domstreams: FAIL
@@ -2400,6 +2444,10 @@
       if not domstreams: FAIL
 
   [WritableStream interface: new WritableStream() must inherit property "abort(optional any)" with the proper type]
+    expected:
+      if not domstreams: FAIL
+
+  [ReadableStream interface: new ReadableStream() must inherit property "pipeTo(WritableStream, optional StreamPipeOptions)" with the proper type]
     expected:
       if not domstreams: FAIL
 
