--- a/testing/web-platform/meta/streams/readable-streams/patched-global.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-streams/patched-global.any.js.ini
@@ -1,18 +1,35 @@
 [patched-global.any.serviceworker.html]
+  [pipeTo() should not call Promise.prototype.then()]
+    expected:
+      if not domstreams: FAIL
+
   [ReadableStream async iterator should use the original values of getReader() and ReadableStreamDefaultReader methods]
     expected: FAIL
 
 
 [patched-global.any.sharedworker.html]
+  [pipeTo() should not call Promise.prototype.then()]
+    expected:
+      if not domstreams: FAIL
+
   [ReadableStream async iterator should use the original values of getReader() and ReadableStreamDefaultReader methods]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
 
 [patched-global.any.worker.html]
+  [pipeTo() should not call Promise.prototype.then()]
+    expected:
+      if not domstreams: FAIL
+
   [ReadableStream async iterator should use the original values of getReader() and ReadableStreamDefaultReader methods]
     expected: FAIL
 
 
 [patched-global.any.html]
+  [pipeTo() should not call Promise.prototype.then()]
+    expected:
+      if not domstreams: FAIL
+
   [ReadableStream async iterator should use the original values of getReader() and ReadableStreamDefaultReader methods]
     expected: FAIL
