Bug 1732739 - Enable session change handling of window occlusion on Windows for nightly and early beta r=gfx-reviewers,nical
Differential Revision: https://phabricator.services.mozilla.com/D138981

UltraBlame original commit: 9625bb4726b19e19bce219b04980c840fb4919cb

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12906,7 +12906,7 @@
 
 - name: widget.windows.window_occlusion_tracking_session_lock.enabled
   type: bool
-  value: false
+  value: @IS_EARLY_BETA_OR_EARLIER@
   mirror: always
 #endif
 
